# simge-examples

./: CMakeLists.txt  README.md
atherton/: CMakeLists.txt  MainWin.cpp  MainWin.hpp
canvasfib/: CMakeLists.txt  Golden.cpp  Golden.hpp  Main.cpp  MainWin.cpp  MainWin.hpp
containmentcontrol/: CMakeLists.txt  MainWin.cpp
double/: CMakeLists.txt  Main.cpp  SpinWindow.cpp  SpinWindow.hpp
enterleave/: CMakeLists.txt  MainWin.cpp  MainWin.hpp
giftwrap/: CMakeLists.txt  GiftWrap.cpp  GiftWrap.hpp  MainWin.cpp  MainWin.hpp
gingerbread/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
hailstone/: CMakeLists.txt  Hailstone.cpp  Hailstone.hpp  Main.cpp  MainWin.cpp  MainWin.hpp
hook/: CMakeLists.txt  MainWin.cpp
insideconvex/: CMakeLists.txt  MainWin.cpp  MainWin.hpp
ischord/: CMakeLists.txt  IsChord.cpp  IsChord.hpp  MainWin.cpp  MainWin.hpp
isconvex/: CMakeLists.txt  MainWin.cpp  MainWin.hpp
joinpolygon/: CMakeLists.txt  InputState.hpp  JoinPolygon.hpp  MainWin.cpp  MainWin.hpp
legalngon/: CMakeLists.txt  LegalNGon.cpp  LegalNGon.hpp  MainWin.cpp  MainWin.hpp
lineplane/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
linestipple/: CMakeLists.txt  Main.cpp  StippleWin.cpp  StippleWin.hpp
logos/: CMakeLists.txt  Main.cpp  MainWin.cpp
mazesolver/: CMakeLists.txt  Main.cpp  Maze.cpp  Maze.hpp  MazeWin.cpp  MazeWin.hpp
monotone/: CMakeLists.txt  MainWin.cpp  MainWin.hpp
normal/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
polylinedisplay/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
polylinedisplay/data/: dino.txt  square.txt  untitled.txt
polylineeditor/: CMakeLists.txt  Editor.cpp  Editor.hpp  Main.cpp  untitled.txt
polyspiral/: CMakeLists.txt  MainWin.cpp
rngvisual/: BasicRng.hpp  CMakeLists.txt  Dots.cpp  Dots.hpp  Main.cpp
rosette/: CMakeLists.txt  MainWin.cpp  MainWin.hpp
sickle/: CMakeLists.txt  MainWin.cpp  MainWin.hpp  Sickle.cpp  Sickle.hpp
starmark/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
starmark/data/: input.txt
triangle/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
triangletriangle/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
turtlengon/: CMakeLists.txt  Main.cpp  MainWin.cpp
twentyone/: CMakeLists.txt  Main.cpp  MainWin.cpp
walker/: CMakeLists.txt  Main.cpp  MainWin.cpp  MainWin.hpp
zigzag/: CMakeLists.txt  MainWin.cpp
