CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)

set(SIMGE_INCLUDE_ROOT "/usr/include" CACHE FILEPATH "Simge include root")

if(NOT EXISTS "${SIMGE_INCLUDE_ROOT}/simge/glut/Window.hpp")
    message(SEND_ERROR "Can't find Window.hpp in ${SIMGE_INCLUDE_ROOT}/simge/glut")
endif()

set(SIMGE_LIB_ROOT "/usr/lib" CACHE FILEPATH "Simge library root")

if(NOT EXISTS "${SIMGE_LIB_ROOT}/libsimge.a")
    message(SEND_ERROR "Can't find libsimge.a in ${SIMGE_LIB_ROOT}")
endif()

LINK_DIRECTORIES(${SIMGE_LIB_ROOT})
INCLUDE_DIRECTORIES(${SIMGE_INCLUDE_ROOT})

LINK_LIBRARIES(simge glut GLU GL)
ADD_SUBDIRECTORY(gingerbread)
ADD_SUBDIRECTORY(hailstone)
ADD_SUBDIRECTORY(rngvisual)
ADD_SUBDIRECTORY(linestipple)
ADD_SUBDIRECTORY(mazesolver)
ADD_SUBDIRECTORY(polylinedisplay)
ADD_SUBDIRECTORY(polylineeditor)
ADD_SUBDIRECTORY(canvasfib)
ADD_SUBDIRECTORY(hook)
ADD_SUBDIRECTORY(logos)
ADD_SUBDIRECTORY(polyspiral)
ADD_SUBDIRECTORY(rosette)
ADD_SUBDIRECTORY(starmark)
ADD_SUBDIRECTORY(turtlengon)
ADD_SUBDIRECTORY(twentyone)
ADD_SUBDIRECTORY(walker)
ADD_SUBDIRECTORY(zigzag)
ADD_SUBDIRECTORY(atherton)
ADD_SUBDIRECTORY(enterleave)
ADD_SUBDIRECTORY(insideconvex)
ADD_SUBDIRECTORY(normal)
ADD_SUBDIRECTORY(triangle)
ADD_SUBDIRECTORY(containmentcontrol)
ADD_SUBDIRECTORY(ischord)
ADD_SUBDIRECTORY(isconvex)
ADD_SUBDIRECTORY(joinpolygon)
ADD_SUBDIRECTORY(legalngon)
ADD_SUBDIRECTORY(lineplane)
ADD_SUBDIRECTORY(triangletriangle)
ADD_SUBDIRECTORY(giftwrap)
ADD_SUBDIRECTORY(monotone)
ADD_SUBDIRECTORY(sickle)
ADD_SUBDIRECTORY(double)
